CSS: ensure that images do not overflow

--- a/content/media/css/luffy.article.less
+++ b/content/media/css/luffy.article.less
@@ -109,12 +109,12 @@ article {
 	text-indent: 23px;
     }
 }
-
 #lf-main {
     img {
 	padding: 0;
 	display: block;
 	margin: 0 auto;
+	max-width: 100%;
     }
 }
 
